--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,7 +7,8 @@ on:
       - main
 
 env:
-  RUBY_VERSION: 2.6
+  RUBY_VERSION: 2.6.8
+  JRUBY_VERSION: jruby-9.3.8.0
   GITHUB_TOKEN: ${{ github.token }}
 
 jobs:
@@ -18,6 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
       - name: Rubocop
         run: bundle exec rubocop
@@ -38,6 +40,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
       - name: Cucumber Lint
         run: bundle exec cuke_linter -p features/
@@ -49,6 +52,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
       - name: Yard Coverage
         run: |
@@ -64,6 +68,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
       - id: set-matrix
         run: |
@@ -81,6 +86,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
       - name: Cache OpenHAB setup
         id: cache
@@ -94,6 +100,38 @@ jobs:
           OPENHAB_VERSION: ${{ matrix.openhab_version }}
         run: bundle exec rake openhab:setup
 
+  rspec:
+    needs: [openhab-matrix, openhab-setup]
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
+    strategy:
+      matrix: ${{fromJson(needs.openhab-matrix.outputs.matrix)}}
+    steps:
+      - uses: actions/checkout@v1
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ env.JRUBY_VERSION }}
+          bundler-cache: true
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "11"
+          java-package: jre
+      - name: Restore OpenHAB setup
+        uses: actions/cache@v2
+        with:
+          path: tmp/
+          key: OpenHAB-setup-${{ hashFiles('.bundlehash', 'Rakefile', 'rakelib/openhab.rake') }}-${{ matrix.openhab_version }}
+      - name: RSpec
+        run: bundle exec rspec
+        timeout-minutes: 2
+      - name: Upload OpenHAB Logs
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: OpenHAB-logs-rspec-${{ github.workflow }}-${{ github.run_number }}-${{ matrix.index }}
+          path: tmp/openhab/runtime/logs
+          retention-days: 2
+
   cucumber-matrix:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip')"
@@ -103,6 +141,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
       - name: Remove env.rb file
         run: |
@@ -123,6 +162,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
       - uses: actions/setup-java@v1
         with:
@@ -173,6 +213,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
       - name: Build yard docs
         run: |
@@ -199,7 +240,7 @@ jobs:
       - uses: actions/checkout@v2
       # We need to use the setup-ruby's non cached bundler action here
       # otherwise the gem build will fail because it is not a development instance
-      - uses: actions/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
       - uses: actions/setup-node@v2
