--- a/.github/workflows/yardoc.yml
+++ b/.github/workflows/yardoc.yml
@@ -3,19 +3,17 @@ name: Deploy YARD docs to Pages
 on:
   push:
     branches: ["main"]
-  workflow_dispatch:
+    tags: ["v*"]
 
 env:
-  RUBY_VERSION: 2.6.8
+  RUBY_VERSION: 3.1.3
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: write
 
 concurrency:
-  group: "pages"
+  group: ${{ github.workflow }}-${{ github.ref_name }}
   cancel-in-progress: true
 
 jobs:
@@ -24,25 +22,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
       - name: Build YARD docs
         run: bin/yardoc
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1    
+      - name: Determine Destination Dir
+        id: destination_dir
+        run: ruby -e 'ref_name = "${{ github.ref_name }}"; ref_name = ref_name[1..-1].split(".")[0..1].join(".") if "${{ github.ref_type }}" == "tag"; puts "DESTINATION_DIR=#{ref_name}"' >> $GITHUB_OUTPUT
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: ./docs/yard/
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/yard/
+          destination_dir: ${{ steps.destination_dir.outputs.DESTINATION_DIR }}
